--- a/Presentation.ipynb
+++ b/Presentation.ipynb
@@ -1,9 +1,34 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# First slide"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "def url_to_iframe(url, text=True):\n",
@@ -99,8 +124,9 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [conda env:Transition]",
+   "display_name": "Python [conda env:Transition] *",
    "language": "python",
    "name": "conda-env-Transition-py"
   },
