--- a/Test_transition_presentation_gaussian.ipynb
+++ b/Test_transition_presentation_gaussian.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "import imageio\n",
     "from PyPDF2 import PdfFileWriter, PdfFileReader\n",
     "import io\n",
+    "import moviepy.editor as mp\n",
     "\n",
     "import numpy as np\n",
     "import ot\n",
@@ -328,12 +329,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_gif(path=\"./pdftoimage/\",\n",
     "               path_slide=\"./Presentation_OT.pdf\"):\n",
+    "    import moviepy.editor as mpy\n",
+    "    def make_gif(path_gif, input_png_list):\n",
+    "        clips = [mpy.ImageClip(i).set_duration(0.1)\n",
+    "                 for i in input_png_list]\n",
+    "        concat_clip = mpy.concatenate_videoclips(clips, method=\"compose\")\n",
+    "        concat_clip.write_gif(path_gif, fps=2)\n",
+    "        \n",
     "    \n",
     "    with open(path + \"/pickle_T/\" + path_slide[2:-4] + \".pickle\", 'rb') as handle:\n",
     "        dict_plot = pickle.load(handle)\n",
@@ -345,11 +353,38 @@
     "    for i in range(I):\n",
     "        print(i)\n",
     "        images = []\n",
+    "#         images.append(imageio.imread(path + \"png_generated/\" + str(i) + \"-\" + str(1) + \".png\"))\n",
+    "        images.append(Image.open(path + \"png_generated/\" + str(i) + \"-\" + str(1) + \".png\"))\n",
     "        for t in reversed(t_list):\n",
-    "            images.append(imageio.imread(path + \"png_transition_generated/\" + str(i) + \"_\" + str(t) + \".png\"))\n",
-    "#         plt.imshow(images[0])\n",
-    "#         plt.imshow(imageio.imread(path + \"png_generated/\" + str(0) + \"-1.png\"))\n",
-    "        imageio.mimsave(path + \"gif_generated/\" + str(i) + \"-\" + str(i+1) + '.gif', images, fps=5, loop=1)"
+    "            images.append(Image.open(path + \"png_transition_generated/\" + str(i) + \"_\" + str(t) + \".png\"))\n",
+    "            images[-1] = images[-1].resize((images[0].size), Image.ANTIALIAS)\n",
+    "        images.append(Image.open(path + \"png_generated/\" + str(i+1) + \"-\" + str(1) + \".png\"))\n",
+    "        \n",
+    "        images[0].save(path + \"gif_generated/\" + str(i) + \"-\" + str(i+1) + '.gif',\n",
+    "                    save_all=True,\n",
+    "                    append_images=images[1:],\n",
+    "                   duration=100)\n",
+    "        images.reverse()\n",
+    "        images[0].save(path + \"gif_generated/\" + str(i+1) + \"-\" + str(i) + '.gif',\n",
+    "                save_all=True,\n",
+    "                append_images=images[1:],\n",
+    "                  duration=100)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "# #         break\n",
+    "#         make_gif(path + \"gif_generated/\" + str(i) + \"-\" + str(i+1) + '.gif', images)\n",
+    "# #         imageio.mimsave(path + \"gif_generated/\" + str(i) + \"-\" + str(i+1) + '.gif', images, fps=5, loop=1)\n",
+    "#         images.reverse()\n",
+    "#         make_gif(path + \"gif_generated/\" + str(i+1) + \"-\" + str(i) + '.gif', images)\n",
+    "#         imageio.mimsave(path + \"gif_generated/\" + str(i+1) + \"-\" + str(i) + '.gif', images, fps=5, loop=1)\n",
+    "        \n",
+    "#         clip = mp.VideoFileClip(path + \"gif_generated/\" + str(i) + \"-\" + str(i+1) + '.gif')\n",
+    "#         clip.write_videofile(path + \"video_generated/\" + str(i) + \"-\" + str(i+1) + '.mp4', codec=\"mpeg4\")"
    ]
   },
   {
@@ -399,6 +434,34 @@
    ],
    "source": [
     "main(K=30, quality=(250,250))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_gif()"
    ]
   },
   {
@@ -588,31 +651,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 110,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n"
+      "            <div>\n",
+      "                <video src=\"./pdftoimage/video_generated/2-3.mp4\"></video>\n",
+      "                <video src=\"./pdftoimage/video_generated/3-2.mp4\"></video>\n",
+      "            </div>\n",
+      "            <img src=\"./pdftoimage/png_generated/3-1.png\"/>\n",
+      "            <div>\n",
+      "                <video src=\"./pdftoimage/video_generated/3-4.mp4\"></video>\n",
+      "                <video src=\"./pdftoimage/video_generated/4-3.mp4\"></video>\n",
+      "            </div>\n",
+      "            <img src=\"./pdftoimage/png_generated/4-1.png\"/>\n",
+      "            <div>\n",
+      "                <video src=\"./pdftoimage/video_generated/4-5.mp4\"></video>\n",
+      "                <video src=\"./pdftoimage/video_generated/5-4.mp4\"></video>\n",
+      "            </div>\n",
+      "            <img src=\"./pdftoimage/png_generated/5-1.png\"/>\n",
+      "            <div>\n",
+      "                <video src=\"./pdftoimage/video_generated/5-6.mp4\"></video>\n",
+      "                <video src=\"./pdftoimage/video_generated/6-5.mp4\"></video>\n",
+      "            </div>\n",
+      "            <img src=\"./pdftoimage/png_generated/6-1.png\"/>\n",
+      "            <div>\n",
+      "                <video src=\"./pdftoimage/video_generated/6-7.mp4\"></video>\n",
+      "                <video src=\"./pdftoimage/video_generated/7-6.mp4\"></video>\n",
+      "            </div>\n",
+      "            <img src=\"./pdftoimage/png_generated/7-1.png\"/>\n",
+      "            <div>\n",
+      "                <video src=\"./pdftoimage/video_generated/7-8.mp4\"></video>\n",
+      "                <video src=\"./pdftoimage/video_generated/8-7.mp4\"></video>\n",
+      "            </div>\n",
+      "            <img src=\"./pdftoimage/png_generated/8-1.png\"/>\n",
+      "            <div>\n",
+      "                <video src=\"./pdftoimage/video_generated/8-9.mp4\"></video>\n",
+      "                <video src=\"./pdftoimage/video_generated/9-8.mp4\"></video>\n",
+      "            </div>\n",
+      "            <img src=\"./pdftoimage/png_generated/9-1.png\"/>\n",
+      "            <div>\n",
+      "                <video src=\"./pdftoimage/video_generated/9-10.mp4\"></video>\n",
+      "                <video src=\"./pdftoimage/video_generated/10-9.mp4\"></video>\n",
+      "            </div>\n",
+      "            <img src=\"./pdftoimage/png_generated/10-1.png\"/>\n",
+      "            <div>\n",
+      "                <video src=\"./pdftoimage/video_generated/10-11.mp4\"></video>\n",
+      "                <video src=\"./pdftoimage/video_generated/11-10.mp4\"></video>\n",
+      "            </div>\n",
+      "            <img src=\"./pdftoimage/png_generated/11-1.png\"/>\n",
+      "            <div>\n",
+      "                <video src=\"./pdftoimage/video_generated/11-12.mp4\"></video>\n",
+      "                <video src=\"./pdftoimage/video_generated/12-11.mp4\"></video>\n",
+      "            </div>\n",
+      "            <img src=\"./pdftoimage/png_generated/12-1.png\"/>\n",
+      "            <div>\n",
+      "                <video src=\"./pdftoimage/video_generated/12-13.mp4\"></video>\n",
+      "                <video src=\"./pdftoimage/video_generated/13-12.mp4\"></video>\n",
+      "            </div>\n",
+      "            <img src=\"./pdftoimage/png_generated/13-1.png\"/>\n",
+      "            <div>\n",
+      "                <video src=\"./pdftoimage/video_generated/13-14.mp4\"></video>\n",
+      "                <video src=\"./pdftoimage/video_generated/14-13.mp4\"></video>\n",
+      "            </div>\n",
+      "            <img src=\"./pdftoimage/png_generated/14-1.png\"/>\n",
+      "            <div>\n",
+      "                <video src=\"./pdftoimage/video_generated/14-15.mp4\"></video>\n",
+      "                <video src=\"./pdftoimage/video_generated/15-14.mp4\"></video>\n",
+      "            </div>\n",
+      "            <img src=\"./pdftoimage/png_generated/15-1.png\"/>\n",
+      "            <div>\n",
+      "                <video src=\"./pdftoimage/video_generated/15-16.mp4\"></video>\n",
+      "                <video src=\"./pdftoimage/video_generated/16-15.mp4\"></video>\n",
+      "            </div>\n",
+      "            <img src=\"./pdftoimage/png_generated/16-1.png\"/>\n",
+      "            <div>\n",
+      "                <video src=\"./pdftoimage/video_generated/16-17.mp4\"></video>\n",
+      "                <video src=\"./pdftoimage/video_generated/17-16.mp4\"></video>\n",
+      "            </div>\n",
+      "            <img src=\"./pdftoimage/png_generated/17-1.png\"/>\n",
+      "            <div>\n",
+      "                <video src=\"./pdftoimage/video_generated/17-18.mp4\"></video>\n",
+      "                <video src=\"./pdftoimage/video_generated/18-17.mp4\"></video>\n",
+      "            </div>\n",
+      "            <img src=\"./pdftoimage/png_generated/18-1.png\"/>\n",
+      "            <div>\n",
+      "                <video src=\"./pdftoimage/video_generated/18-19.mp4\"></video>\n",
+      "                <video src=\"./pdftoimage/video_generated/19-18.mp4\"></video>\n",
+      "            </div>\n",
+      "            <img src=\"./pdftoimage/png_generated/19-1.png\"/>\n",
+      "            <div>\n",
+      "                <video src=\"./pdftoimage/video_generated/19-20.mp4\"></video>\n",
+      "                <video src=\"./pdftoimage/video_generated/20-19.mp4\"></video>\n",
+      "            </div>\n",
+      "            <img src=\"./pdftoimage/png_generated/20-1.png\"/>\n"
      ]
     }
    ],
    "source": [
-    "create_gif()"
+    "for i in range(2,20):\n",
+    "    print(\"            <div>\")\n",
+    "    print('                <video src=\"./pdftoimage/video_generated/' + str(i) + '-' + str(i+1) +'.mp4\"></video>')\n",
+    "    print('                <video src=\"./pdftoimage/video_generated/' + str(i+1) + '-' + str(i) +'.mp4\"></video>')\n",
+    "    print(\"            </div>\")\n",
+    "    print('            <img src=\"./pdftoimage/png_generated/' + str(i+1) + '-1.png\"/>')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
